--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jboss.tools</groupId>
+    <groupId>com.dnastack</groupId>
     <artifactId>beacon-aggregator</artifactId>
+    <name>beacon-aggregator</name>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>beacon-aggregator</name>
     <description>Beacon of Beacons</description>
     
     <properties>
@@ -75,6 +75,7 @@
     </dependencies>
     
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
