--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
             </dependency>
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
-                <artifactId>eclipselink</artifactId>
+                <artifactId>org.eclipse.persistence.moxy</artifactId>
                 <version>${version.eclipselink}</version>
             </dependency>
             <dependency>
@@ -150,7 +150,7 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
+            <artifactId>org.eclipse.persistence.moxy</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
