--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <version.org.apache.httpcomponents.httpclient>4.3.5</version.org.apache.httpcomponents.httpclient>
         <version.org.json.json>20140107</version.org.json.json>
         <version.eclipselink>2.6.0-M3</version.eclipselink>
+        <version.xmlrpc-client>3.1.3</version.xmlrpc-client>
         <version.guava>18.0</version.guava>
         <version.war.plugin>2.1.1</version.war.plugin>
         <version.surefire.plugin>2.17</version.surefire.plugin>
@@ -114,6 +115,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${version.guava}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.xmlrpc</groupId>
+                <artifactId>xmlrpc-client</artifactId>
+                <version>${version.xmlrpc-client}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
