--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,9 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
         <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
-        <version.jboss.bom.eap>6.2.0-redhat-1</version.jboss.bom.eap>
+        <version.jboss.spec.javaee.7.0>8.2.0.Final</version.jboss.spec.javaee.7.0>
         <version.shrinkwrap.resolver.bom>2.1.1</version.shrinkwrap.resolver.bom>
         <version.arquillian.bom>1.1.5.Final</version.arquillian.bom>
         <version.org.apache.httpcomponents.httpclient>4.3.5</version.org.apache.httpcomponents.httpclient>
@@ -62,6 +63,7 @@
         <version.eclipselink>2.6.0-M3</version.eclipselink>
         <version.xmlrpc-client>3.1.3</version.xmlrpc-client>
         <version.guava>18.0</version.guava>
+        <version.log4j>1.2.16</version.log4j>
         <version.war.plugin>2.3</version.war.plugin>
         <version.surefire.plugin>2.17</version.surefire.plugin>
         <version.compiler.plugin>2.3.2</version.compiler.plugin>
@@ -70,22 +72,17 @@
         <version.deploy.plugin>2.8</version.deploy.plugin>
         <version.install.plugin>2.3.1</version.install.plugin>
         <version.ejb.plugin>2.3</version.ejb.plugin>
+        <version.wildfly.arquillian.plugin>8.2.0.Final</version.wildfly.arquillian.plugin>
+        <version.jboss.arquillian.plugin>7.2.0.Final</version.jboss.arquillian.plugin>
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.compiler.source>1.7</maven.compiler.source>
     </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.jboss.bom.eap</groupId>
-                <artifactId>jboss-javaee-6.0-with-tools</artifactId>
-                <version>${version.jboss.bom.eap}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.bom.eap</groupId>
-                <artifactId>jboss-javaee-6.0-with-hibernate</artifactId>
-                <version>${version.jboss.bom.eap}</version>
+                <groupId>org.wildfly.bom</groupId>
+                <artifactId>jboss-javaee-7.0-with-all</artifactId>
+                <version>${version.jboss.spec.javaee.7.0}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -107,6 +104,11 @@
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>${version.org.apache.httpcomponents.httpclient}</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${version.log4j}</version>
             </dependency>
             <dependency>
                 <groupId>org.json</groupId>
@@ -183,6 +185,31 @@
                     <groupId>org.jboss.as.plugins</groupId>
                     <artifactId>jboss-as-maven-plugin</artifactId>
                     <version>${version.jboss.maven.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.wildfly.plugins</groupId>
+                    <artifactId>wildfly-maven-plugin</artifactId>
+                    <version>${version.wildfly.maven.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
+                    <version>${version.wildfly.arquillian.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-remote</artifactId>
+                    <version>${version.wildfly.arquillian.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>${version.jboss.arquillian.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <version>${version.jboss.arquillian.plugin}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
