[fixed #38] set up moxy as jax-rs provider with wildfly

--- a/bob-rest/pom.xml
+++ b/bob-rest/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>org.eclipse.persistence.moxy</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxb-provider</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
