--- a/bob-service-api/pom.xml
+++ b/bob-service-api/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>jaxrs-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.moxy</artifactId>
+        </dependency>
     </dependencies>
     
     <build>
