--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <version.arquillian.bom>1.1.5.Final</version.arquillian.bom>
         <version.org.apache.httpcomponents.httpclient>4.3.5</version.org.apache.httpcomponents.httpclient>
         <version.org.json.json>20140107</version.org.json.json>
-        <version.eclipselink>2.6.0-M3</version.eclipselink>
+        <version.eclipselink>2.5.2</version.eclipselink>
         <version.xmlrpc-client>3.1.3</version.xmlrpc-client>
         <version.guava>18.0</version.guava>
         <version.log4j>1.2.16</version.log4j>
