--- a/bob-rest/pom.xml
+++ b/bob-rest/pom.xml
@@ -133,7 +133,7 @@
             </build>
         </profile>
         <profile>
-            <id>arq-wildfly-managed</id>
+            <id>functional-tests-managed</id>
             <dependencies>
                 <dependency>
                     <groupId>org.wildfly</groupId>
@@ -148,7 +148,37 @@
             </dependencies>
         </profile>
         <profile>
-            <id>arq-wildfly-remote</id>
+            <id>functional-tests-remote</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-remote</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.arquillian.protocol</groupId>
+                    <artifactId>arquillian-protocol-servlet</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>all-tests-managed</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.arquillian.protocol</groupId>
+                    <artifactId>arquillian-protocol-servlet</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>all-tests-remote</id>
             <dependencies>
                 <dependency>
                     <groupId>org.wildfly</groupId>
