--- a/bob-data/pom.xml
+++ b/bob-data/pom.xml
@@ -78,8 +78,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -111,7 +111,7 @@
         </plugins>
     </build>
     
-     <profiles>
+    <profiles>
         <profile>
             <id>no-tests</id>
             <activation>
