--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <version.arquillian.bom>1.1.5.Final</version.arquillian.bom>
         <version.arquillian.persistence>1.0.0.Alpha7</version.arquillian.persistence>
         <version.arquillian.transaction>1.0.1.Final</version.arquillian.transaction>
-        <version.hamcrest>1.3</version.hamcrest>
+        <version.assertj>2.0.0</version.assertj>
         <version.org.apache.httpcomponents.httpclient>4.3.5</version.org.apache.httpcomponents.httpclient>
         <version.org.json.json>20140107</version.org.json.json>
         <version.eclipselink>2.5.2</version.eclipselink>
@@ -114,15 +114,15 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-all</artifactId>
-                <version>${version.hamcrest}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
                 <groupId>org.jboss.arquillian.extension</groupId>
                 <artifactId>arquillian-persistence-dbunit</artifactId>
                 <version>${version.arquillian.persistence}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${version.assertj}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
