--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,10 @@
         <version.arquillian.persistence>1.0.0.Alpha7</version.arquillian.persistence>
         <version.arquillian.transaction>1.0.1.Final</version.arquillian.transaction>
         <version.assertj>2.0.0</version.assertj>
+        <version.hamcrest>1.3</version.hamcrest>
         <version.org.apache.httpcomponents.httpclient>4.3.5</version.org.apache.httpcomponents.httpclient>
         <version.org.json.json>20140107</version.org.json.json>
+        <version.gson>2.3.1</version.gson>
         <version.eclipselink>2.5.2</version.eclipselink>
         <version.xmlrpc-client>3.1.3</version.xmlrpc-client>
         <version.guava>18.0</version.guava>
@@ -126,6 +128,12 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-all</artifactId>
+                <version>${version.hamcrest}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>${version.org.apache.httpcomponents.httpclient}</version>
@@ -154,6 +162,12 @@
                 <groupId>org.apache.xmlrpc</groupId>
                 <artifactId>xmlrpc-client</artifactId>
                 <version>${version.xmlrpc-client}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${version.gson}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
