excluding SQL files from the repository

--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,6 @@ local.properties
 # Locally stored "Eclipse launch configurations"
 *.launch
 
+# initialization data
 DatabaseInitializer.java
+*.sql
