improved certificate handling in docker

--- a/bob-tools/docker/Dockerfile
+++ b/bob-tools/docker/Dockerfile
@@ -4,9 +4,10 @@ ENV JBOSS_HOME /opt/jboss/wildfly
 
 ADD data $JBOSS_HOME/customization/
 
-RUN find $JBOSS_HOME/customization/crt/ -type f -exec keytool -import -trustcacerts -keystore cacerts -storepass changeit -noprompt -alias `basename {}` -file {} \;
+USER root
+RUN find $JBOSS_HOME/customization/crt/ -type f -exec keytool -import -trustcacerts -keystore $JAVA_HOME/jre/lib/security/cacerts -storepass changeit -noprompt -alias `basename {}` -file {} \;
 
+USER jboss
 RUN /opt/jboss/wildfly/bin/add-user.sh admin admin --silent
 
 CMD ["/opt/jboss/wildfly/customization/execute.sh"]
-
