--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,11 @@
         <version.xmlrpc-client>3.1.3</version.xmlrpc-client>
         <version.guava>18.0</version.guava>
         <version.log4j>1.2.16</version.log4j>
+        <version.swagger>2.1.0</version.swagger>
         <version.war.plugin>2.3</version.war.plugin>
         <version.surefire.plugin>2.17</version.surefire.plugin>
         <version.compiler.plugin>2.3.2</version.compiler.plugin>
+        <version.jaxb.plugin>2.1</version.jaxb.plugin>
         <version.jar.plugin>2.2</version.jar.plugin>
         <version.exec.plugin>1.2.1</version.exec.plugin>
         <version.deploy.plugin>2.8</version.deploy.plugin>
@@ -146,6 +148,11 @@
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>${version.org.json.json}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>swagger-ui</artifactId>
+                <version>${version.swagger}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
@@ -233,6 +240,11 @@
                     <groupId>org.wildfly</groupId>
                     <artifactId>wildfly-arquillian-container-remote</artifactId>
                     <version>${version.wildfly.arquillian.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>jaxb2-maven-plugin</artifactId>
+                    <version>${version.jaxb.plugin}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
