--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.dnastack</groupId>
     <artifactId>bob</artifactId>
     <name>bob</name>
-    <description>Beacon of Beacons parent module</description>
+    <description>Beacon Network parent module</description>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     
@@ -66,6 +66,7 @@
         <version.xmlrpc-client>3.1.3</version.xmlrpc-client>
         <version.guava>18.0</version.guava>
         <version.log4j>1.2.16</version.log4j>
+        <version.lombok>1.14.8</version.lombok>
         <version.swagger>2.1.0</version.swagger>
         <version.war.plugin>2.3</version.war.plugin>
         <version.surefire.plugin>2.17</version.surefire.plugin>
@@ -75,11 +76,10 @@
         <version.exec.plugin>1.2.1</version.exec.plugin>
         <version.deploy.plugin>2.8</version.deploy.plugin>
         <version.install.plugin>2.3.1</version.install.plugin>
-        <version.ejb.plugin>2.3</version.ejb.plugin>
+        <version.ejb.plugin>2.5.1</version.ejb.plugin>
         <version.wildfly.arquillian.plugin>8.2.0.Final</version.wildfly.arquillian.plugin>
         <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
-        <maven.compiler.target>1.7</maven.compiler.target>
-        <maven.compiler.source>1.7</maven.compiler.source>
+        <version.lombok.plugin>1.14.8.0</version.lombok.plugin>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -109,6 +109,12 @@
                 <version>${version.arquillian.bom}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency> 
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${version.lombok}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.extension</groupId>
@@ -245,6 +251,11 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>jaxb2-maven-plugin</artifactId>
                     <version>${version.jaxb.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok-maven-plugin</artifactId>
+                    <version>${version.lombok.plugin}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
