updated docker container to jdk 8, increased memory assigned to the server in the docker container

--- a/bob-tools/docker/Dockerfile
+++ b/bob-tools/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM jboss/wildfly:latest
+FROM jboss/wildfly:8.2.1.Final
 
 ENV JBOSS_HOME /opt/jboss/wildfly
 
@@ -6,8 +6,10 @@ ADD data $JBOSS_HOME/customization/
 
 USER root
 RUN find $JBOSS_HOME/customization/crt/ -type f -exec keytool -import -trustcacerts -keystore $JAVA_HOME/jre/lib/security/cacerts -storepass changeit -noprompt -alias `basename {}` -file {} \;
+RUN yes | yum install patch
 
 USER jboss
+RUN patch $JBOSS_HOME/bin/standalone.conf < $JBOSS_HOME/customization/opts.patch
 RUN /opt/jboss/wildfly/bin/add-user.sh admin admin --silent
 
 CMD ["/opt/jboss/wildfly/customization/execute.sh"]
