--- a/bob-data/pom.xml
+++ b/bob-data/pom.xml
@@ -67,6 +67,11 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
             <scope>test</scope>
         </dependency>
