--- a/pom.xml
+++ b/pom.xml
@@ -52,17 +52,18 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.jboss.spec.javaee.7.0>8.2.0.Final</version.jboss.spec.javaee.7.0>
+        <version.jboss.spec.javaee.7.0>8.2.1.Final</version.jboss.spec.javaee.7.0>
         <version.shrinkwrap.resolver.bom>2.1.1</version.shrinkwrap.resolver.bom>
-        <version.arquillian.bom>1.1.5.Final</version.arquillian.bom>
+        <version.arquillian.bom>1.1.8.Final</version.arquillian.bom>
         <version.arquillian.persistence>1.0.0.Alpha7</version.arquillian.persistence>
         <version.arquillian.transaction>1.0.1.Final</version.arquillian.transaction>
         <version.assertj>2.0.0</version.assertj>
+        <version.junit>4.12</version.junit>
         <version.hamcrest>1.3</version.hamcrest>
         <version.org.apache.httpcomponents.httpclient>4.3.5</version.org.apache.httpcomponents.httpclient>
         <version.org.json.json>20140107</version.org.json.json>
         <version.gson>2.3.1</version.gson>
-        <version.eclipselink>2.5.2</version.eclipselink>
+        <version.eclipselink>2.6.0</version.eclipselink>
         <version.xmlrpc-client>3.1.3</version.xmlrpc-client>
         <version.guava>18.0</version.guava>
         <version.log4j>1.2.16</version.log4j>
@@ -77,7 +78,7 @@
         <version.deploy.plugin>2.8</version.deploy.plugin>
         <version.install.plugin>2.3.1</version.install.plugin>
         <version.ejb.plugin>2.5.1</version.ejb.plugin>
-        <version.wildfly.arquillian.plugin>8.2.0.Final</version.wildfly.arquillian.plugin>
+        <version.wildfly.arquillian.plugin>8.2.1.Final</version.wildfly.arquillian.plugin>
         <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
         <version.lombok.plugin>1.14.8.0</version.lombok.plugin>
         <version.tools>1.4.2</version.tools>
@@ -134,6 +135,12 @@
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${version.assertj}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${version.junit}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
