--- a/bob-service/pom.xml
+++ b/bob-service/pom.xml
@@ -37,11 +37,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.logging</groupId>
-            <artifactId>jboss-logging</artifactId>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency> 
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
