--- a/bob-data-api/pom.xml
+++ b/bob-data-api/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
 
     <name>bob-data-api</name>
-    <description>Beacon of Beacons data module</description>
+    <description>Beacon of Beacons data API module</description>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
