--- a/bob-service-converter-impl/pom.xml
+++ b/bob-service-converter-impl/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>bob-service-converter-impl</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <description>Beacon of Beacons service module</description>
+    <description>Beacon of Beacons converter implementation module</description>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
