--- a/bob-service-parser-impl/pom.xml
+++ b/bob-service-parser-impl/pom.xml
@@ -7,10 +7,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>bob-service-fetcher-impl</artifactId>
+    <artifactId>bob-service-parser-impl</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>ejb</packaging>
-    <description>Beacon of Beacons fetcher implementation module</description>
+    <packaging>jar</packaging>
+    <description>Beacon of Beacons parser implementation module</description>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -20,13 +20,27 @@
     <dependencies>
         <dependency>
             <groupId>com.dnastack</groupId>
-            <artifactId>bob-service-fetcher-api</artifactId>
+            <artifactId>bob-data-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dnastack</groupId>
+            <artifactId>bob-data-impl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dnastack</groupId>
+            <artifactId>bob-service-parser-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -37,10 +51,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
         </dependency>
     </dependencies>
 
@@ -53,13 +63,6 @@
                     <compilerVersion>1.8</compilerVersion>
                     <source>1.8</source>
                     <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-ejb-plugin</artifactId>
-                <configuration>
-                    <ejbVersion>3.1</ejbVersion>
                 </configuration>
             </plugin>
             <plugin>
