--- a/bob-service-requester-impl/pom.xml
+++ b/bob-service-requester-impl/pom.xml
@@ -7,10 +7,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>bob-service-fetcher-impl</artifactId>
+    <artifactId>bob-service-requester-impl</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>ejb</packaging>
-    <description>Beacon of Beacons fetcher implementation module</description>
+    <packaging>jar</packaging>
+    <description>Beacon of Beacons requester implementation module</description>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>com.dnastack</groupId>
-            <artifactId>bob-service-fetcher-api</artifactId>
+            <artifactId>bob-service-requester-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -38,10 +38,6 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -53,13 +49,6 @@
                     <compilerVersion>1.8</compilerVersion>
                     <source>1.8</source>
                     <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-ejb-plugin</artifactId>
-                <configuration>
-                    <ejbVersion>3.1</ejbVersion>
                 </configuration>
             </plugin>
             <plugin>
